log
CXX src/ChaiLove.cpp
In file included from src/ChaiLove.h:62,
                 from src/ChaiLove.cpp:1:
src/love/image.h:15:7: error: ‘struct love::image’ redeclared as different kind of entity
   15 | class image {
      |       ^~~~~
compilation terminated due to -Wfatal-errors.
make: *** [Makefile:31: src/ChaiLove.o] Error 1
